# tinyns

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  bench_rwalk_kernel.py  bench_static.py  overnight_jax_validation.py  run_overnight_jax_validation.sh  summarize_overnight_jax_validation.py
benchmarks/templates/: external_expensive_likelihood_template.py  gw_like_10d_tinyns_b32_figures.py
examples/: banana_2d.py  checkpoint_resume.py  constant.py  eggbox_2d.py  gaussian_1d.py  gaussian_2d.py  gaussian_2d_rslice.py  gaussian_2d_rwalk.py  gaussian_2d_rwalk_jax.py  gaussian_2d_rwalk_jax_block.py  gaussian_2d_slice.py  progress_and_callback.py  repeated_gaussian_evidence.py  save_load_result.py  vectorized_gaussian_2d.py
src/tinyns/: __init__.py  api.py  bounds.py  math.py  result.py  run.py  samplers.py  state.py  types.py
tests/: test_api_contract.py  test_bench_rwalk_kernel.py  test_bench_static.py  test_bounds.py  test_checkpoint_resume.py  test_docs.py  test_examples.py  test_math.py  test_result.py  test_samplers.py  test_static_ns.py  test_validation_compare.py  test_validation_run.py  test_validation_summary.py  test_validation_targets.py
validation/: README.md  compare_validation.py  run_validation.py  summarize_validation.py  targets.py
