[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyns"
version = "0.1.0"
description = "A tiny dynesty-style nested sampler for JAX likelihoods."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "tinyns contributors" },
]
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tinyns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
